--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,29 @@
     color: black;
     padding: 2px;
 }
+
+.style1{
+    display: grid;
+    width: 100%;
+    height: 100%;
+    grid-template-areas:
+        "head" "head" "head" "head" "head" "head" "head" "head" "head" "head" "head" "head"
+        "nav" "nav" "nav" "nav" "nav" "nav" "nav" "nav" "nav" "nav" "nav" "nav"
+        "main" "main" "main" "main" "main" "main" "main" "main" "main" "main" "main" "main" "main"
+        "footer" "footer" "footer" "footer" "footer" "footer" "footer" "footer" "footer" "footer" "footer" "footer";
+}
+
+.style2{
+    grid-area: head;
+    background-color: green;
+}
+
+.style3{
+    grid-area: nav;
+    background-color: red;
+}
+
+.style4{
+    grid-area: footer;
+    background-color: blue;
+}
